<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RunWithMeActivity!</string>
    <string name="app_name">RunWithMe</string>
    <string name="welcome_title">Co dziś porobimy?</string>
    <string name="welcome_intervals">Rozpocznij trening</string>
    <string name="welcome_distances">Dystansy</string>
    <string name="welcome_stopwatch">Stoper</string>
    <string name="intervals_speed">Szybkość</string>
    <string name="workout_prompt">Wybierz trening</string>
    <string name="welcome_logbook">Zapisane treningi</string>

    <string-array name="act_menu">
        <item>Udostępnij</item><item>Usuń</item>
        
    </string-array>
        <string name="speed">Prędkość</string>
        <string name="monitor_showmap">Wyświetl mapę</string>
        <string name="monitor_addworkout">Dodaj trening</string>
        <string name="welcome_share">Udostępnianie</string>
        <string name="welcome_achieved">Osiągnięcia</string>
        <string name="elevation">Wysokość</string>
        <string name="welcome_info">Autorzy</string>

</resources>