<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <Button
        android:id="@+id/btnIntervals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_runner"
        android:text="@string/welcome_intervals"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_logbook"
        android:text="@string/welcome_logbook" 
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnAchieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_achieved"
        android:textSize="20dp" android:drawableLeft="@drawable/ic_medal"/>

    <Button
        android:id="@+id/btnStopwatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_intervals"
        android:text="@string/welcome_stopwatch"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_share"
        android:text="@string/welcome_share"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" android:layout_weight="1"/>
    
    <Button
        android:id="@+id/btnInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_share"
        android:text="@string/welcome_info"
        android:textSize="20dp" />

</LinearLayout>